brat/test/golden/imports/use-illegal-z2.brat
import lib (x, y)

main :: Nat, Int, Bool
main = lib.x, lib.y, lib.z
